--- a/client/multimodal/src/App.module.css
+++ b/client/multimodal/src/App.module.css
@@ -2,6 +2,11 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+
     padding: 0 var(--space-4);
 }
 
